ns/manserfam/photos2022/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: photos2022
  namespace: manserfam
spec:
  ports:
  - port: 80
    name: http
    targetPort: http
