ns/manserfam/photos2022/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: photos2022
  namespace: manserfam
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - katja'
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - photos2022.manserfam.com
    - www.photos2022.manserfam.com
    secretName: photos2022-cert
  rules:
  - host: photos2022.manserfam.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: photos2022
            port: 
              name: http
